# alpenglow-formal

./: .gitignore  DELIVERABLES_COMPLETE.md  FINAL_DELIVERABLES.md  FINAL_PROJECT_COMPLETION.md  LICENSE  PROJECT_COMPLETION_REPORT.md  README.md  TECHNICAL_REPORT.md
formal/stateright/: ALPENGLOW_COMPLETE_VERIFICATION_REPORT.md  Cargo.toml  EXECUTIVE_SUMMARY.md  PROOF_VERIFICATION_SUMMARY.md  README.md  TASK4_COMPLETION_REPORT.md  TECHNICAL_REPORT.md
formal/stateright/benches/: consensus_bench.rs
formal/stateright/examples/: advanced_byzantine.rs
formal/stateright/src/: lib.rs  lib_improved.rs  main.rs  tests.rs  tests_alpenglow_complete.rs  tests_byzantine.rs  tests_economic.rs  tests_network.rs  tests_scalability.rs  tests_statistical.rs
formal/stateright/src/lib_improved/: scalability.rs
formal/tla/: Alpenglow.tla  AlpenglowModel.cfg  README.md
