[package]
name = "alpenglow-stateright"
version = "0.3.0"
edition = "2021"
authors = ["Alpenglow Team"]
description = "Comprehensive formal verification suite for Alpenglow protocol"
license = "Apache-2.0"

[[bin]]
name = "alpenglow"
path = "src/main.rs"

[[bin]]
name = "explorer"
path = "src/bin/explorer.rs"

[dependencies]
stateright = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
